# fastapi_test_task

./: .env  .env-non-dev  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/versions/: 2023_10_24_1908-1948d5f34bd3_create_table.py  2023_10_25_1730-21797aa8dff5_update_user_model.py  2023_10_25_1736-d515e29a0fc5_update_user_model.py  2023_10_25_1742-83c355fd0f23_update_user_model.py  2023_10_31_1747-21ae86108906_create_profile_usersbooks_table.py  2023_11_07_2130-38acf2907a50_update_profile.py
api/auth/: manager.py  schemas.py  strategy.py  transport.py
api/authors/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
api/books/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
api/profile/: __init__.py  crud.py  schemas.py  views.py
core/: config.py  logger.py
core/models/: __init__.py  author.py  base.py  book.py  bookauthor.py  profile.py  user.py  usersbooks.py  utils.py
